feat(core): auto-detect Maven classpath with reactor-wide union
ClasspathDetector now runs dependency:build-classpath with scope=test (the
widest scope) and a relative -Dmdep.outputFile, then unions every reactor
module's output so multi-module projects resolve far more types. An absolute
outputFile was previously overwritten per module, yielding only the last
module's deps. Timeout raised 60s→300s for large reactors.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>